# TURL

./: .gitignore  .pre-commit-config.yaml  evaluate_CF.sh  evaluate_analysis.sh  evaluate_task.ipynb  evaluate_task.py  get_table_repr_CER.sh  job_turl.sh  parse_config.py  pre_train.sh  pre_train_hybrid.sh  pre_train_hybrid_v2.sh  pre_train_hybrid_v2_dry.sh  preprocess_data.py  pyproject.toml  remove_duplicated_tables.py  requirements.txt  run_BERT_RE_finetuning.py  run_hybrid_table_lm_finetuning.py  run_lm_finetuning.py  run_table_CER_finetuning.py  run_table_CT_finetuning.py  run_table_EL_finetuning.py  run_table_HR_finetuning.py  run_table_RE_finetuning.py  run_table_TR_finetuning.py  run_table_lm_finetuning.py  test_data_loader.py  train.py
baselines/attribute_discovery/: attribute_discovery.ipynb
baselines/cell_filling/: build_entity2entity.ipynb  cell_filling.py  create_testing_data.py
baselines/col_type/: Untitled.ipynb
baselines/entity_linking/: data_processing.ipynb
baselines/row_population/: build_term_freq.ipynb  column_evaluation.py  elastic_cache.py  row_evaluation.py  row_ranking_entities.py
baselines/table2vec/: table2vec.ipynb
data_loader/: CT_SemCol_data_loaders.py  CT_Wiki_data_loaders.py  EL_data_loaders.py  RE_data_loaders.py  TR_data_loaders.py  ct_semCol_data_loaders.py  ct_wiki_data_loaders.py  data_loaders.py  el_data_loaders.py  header_data_loaders.py  hybrid_data_loaders.py  re_data_loaders.py  tr_data_loaders.py
data_preparation/: prepare_semtab_data.py
fine_tuning/: run_table_CER_finetuning.py  run_table_CT_finetuning.py  run_table_HR_finetuning.py  run_table_lm_finetuning.py
model/: configuration.py  model.py  optim.py
model/transformers/: __init__.py  __main__.py  configuration_auto.py  configuration_bert.py  configuration_ctrl.py  configuration_distilbert.py  configuration_gpt2.py  configuration_openai.py  configuration_transfo_xl.py  configuration_utils.py  configuration_xlm.py  configuration_xlnet.py  convert_bert_original_tf_checkpoint_to_pytorch.py  convert_bert_pytorch_checkpoint_to_original_tf.py  convert_gpt2_original_tf_checkpoint_to_pytorch.py  convert_openai_original_tf_checkpoint_to_pytorch.py  convert_pytorch_checkpoint_to_tf2.py  convert_roberta_original_pytorch_checkpoint_to_pytorch.py  convert_transfo_xl_original_tf_checkpoint_to_pytorch.py  convert_xlm_original_pytorch_checkpoint_to_pytorch.py  convert_xlnet_original_tf_checkpoint_to_pytorch.py  file_utils.py  modeling_auto.py  modeling_beam_search.py  modeling_bert.py  modeling_camembert.py  modeling_ctrl.py  modeling_distilbert.py  modeling_encoder_decoder.py  modeling_gpt2.py  modeling_openai.py  modeling_roberta.py  modeling_tf_auto.py  modeling_tf_bert.py  modeling_tf_ctrl.py  modeling_tf_distilbert.py  modeling_tf_gpt2.py  modeling_tf_openai.py  modeling_tf_pytorch_utils.py  modeling_tf_roberta.py  (+23 more)
notebooks/: el_data_inspection.ipynb  evaluate_el_t2d.ipynb  evaluate_task.ipynb  example_table_1.jsonl  example_table_2.jsonl  lr_scheduler.ipynb  preprocess_raw_semtab_data.ipynb  tables_to_pd.ipynb  test_data_loader.ipynb
old/: test.py  test_data_loader.py  train.py
scripts/: pre_train_hybrid_v2.sh
src/base/: base_trainer.py
src/data_loader/: EL_data_loaders.py  RE_data_loaders.py  ct_semcol_data_loaders.py  ct_wiki_data_loaders.py  el_data_loaders.py  header_data_loaders.py  hybrid_data_loaders.py  re_data_loaders.py  tr_data_loaders.py
src/model/: metric.py  model.py  model_v2.py  optim.py
src/trainer/: trainer.py
src/utils/: lora.py  prepare_entity_embedding_from_lm.py  prepare_header_embedding_from_pretrain.py  util.py
tasks/cea/: fine_tune_EL.sh  run_table_EL_finetuning.py
tasks/cer/: evaluate_CER.sh  fine_tune_CER.sh
tasks/cta/: fine_tune_CT.sh  (+2 more)
utils/: prepare_entity_embedding_from_lm.py  prepare_header_embedding_from_pretrain.py  util.py
(+61 files in other folders)
